# phonepi

./: .gitlab-ci.yml  .gitmodules  mainwindow.h  phone.pro
daemon/: Additional.h  CMakeLists.txt  DBus.cpp  DBus.h  Handler.cpp  Handler.h  Modem.cpp  Modem.h  OfonoModem.h  OfonoVoiceCallManagerAdaptor.cpp  OfonoVoiceCallManagerAdaptor.h  Struct.h  main.cpp  ofono.xml  org.ofono.VoiceCallManager.xml
presentation/: preamble.tex  presentation.md
presentations/: .gitignore
presentations/OS&Co/gps/: preamble.tex  presentation.md
presentations/OS&Co/oFono/: preamble.tex  presentation.md
presentations/sprint0/: Makefile  preamble.yml  presentation.md
presentations/sprint1/: presentation.md
presentations/sprint1/pics/: driver_architecture.graphml  sound1.graphml  sound2.graphml
presentations/sprint2/: guillemots.hs  preamble.tex  presentation.md
presentations/sprint3/: presentation.md
qt/: mainwindow.h  phone.pro
src/: .gitignore
src/Cerebellum/mcu_cereb/: mcu_cereb.ino
src/Cerebellum/rpi_cerebra/: Makefile  cerebro  cerebro.cpp  cerebro.service
src/Cerebellum/rpi_cerebra/tests/: test5.daemonGetTemp.cpp  test5.rtcGetTemp.cpp
src/XXoff/: .gitignore  main.cpp  mainwindow.cpp  mainwindow.h  res.qrc  xxoff.pro
src/XXoff/qml/: main.qml
src/XXoff/qml/core/: Button.qml
src/block-apps/: .gitignore  CMakeLists.txt
src/block-apps/block/: CMakeLists.txt  main.cpp
src/block-apps/unblock/: CMakeLists.txt  Config.cpp  Config.h  Timer.cpp  Timer.h  UnblockExecutor.cpp  UnblockExecutor.h  config.ini  main.cpp
src/btn_sound/: btn_sound  btn_sound.pro
src/daemonOfButtonEvents/: .gitignore  GPIOController.cpp  GPIOController.h  Makefile  buttonsDaemon.pro  main.cpp  set-speaker-volume  stumpScript
src/daemonOfButtonEvents/tests/: Makefile  buttonsDaemon.pro  set-speaker-volume.cpp  test-speaker-volumeGCC  test_GPIOController.cpp
src/daemonOfButtonEvents/tmpDir/: buttonsDaemon  main.cpp
src/daemonOfButtonEvents/tmpDir/tests/: .qmake.stash  Makefile  set-speaker-volume.cpp  test-speaker-volumeGCC
src/daemonRTC/: README for RTC daemon.docx  README for daemonRTC.odt  RTCsync.sh  daemonRTC.service
src/desktop/: .gitignore  AppRunner.cpp  AppRunner.h  CMakeLists.txt  Config.cpp  Config.h  config.ini  main.cpp  phone.entry
src/desktop/entries/: phone.desktop  phone.entry  settings.desktop  status_bar.desktop
src/phone/: Makefile  main.qml  mainwindow.cpp  mainwindow.h  moc_mainwindow.cpp  phone  phone.pro  qrc_res.cpp  res.qrc
src/phone/daemon/: AdaptorVoiceCallManager.cpp  AdaptorVoiceCallManager.h  Additional.h  CMakeLists.txt  DBus.cpp  DBus.h  Handler.cpp  Handler.h  Modem.cpp  Modem.h  NetworkRegistration.cpp  NetworkRegistration.h  OfonoModem.cpp  OfonoModem.h  OfonoVoiceCallManagerAdaptor.cpp  ProxyVoiceCallManager.cpp  ProxyVoiceCallManager.h  VoiceCallManager.cpp  VoiceCallManager.h  calls-daemon.service  calls_daemon.pro  main.cpp  ofono.xml  org.ofono.VoiceCallManager.xml
src/phone/gtk/: CMakeLists.txt  Call.cpp  Call.h  Number.cpp  Number.h  Phone.cpp  Phone.h  QDBusCalls.cpp  QDBusCalls.h  lib.h  main.cpp
src/phone/qt/: Additional.h  Button.cpp  Button.h  CMakeLists.txt  CallWindow.cpp  CallWindow.h  DialerWindow.cpp  DialerWindow.h  IncomingCall.cpp  IncomingCall.h  Makefile  main.cpp  mainwindow.cpp  mainwindow.h  moc_mainwindow.cpp  phone  phone.desktop  phone.pro  qrc_res.cpp  res.qrc
src/phone/qt/qml/: button.qml  dialing.qml  main.qml  mainBackup.qml
src/phone/qt/qml/core/: Button.qml
src/settings-app/: .gitignore  CMakeLists.txt  brightness.cpp  brightness.h  main.cpp
src/settings-app/entry/: settings-pi.desktop  settings.desktop
src/sniffer_driver/driver/: sniffer.c
src/status_bar/: main.cpp  main.qml  mainwindow.cpp  mainwindow.h  status.pro  status_bar.cpp  status_bar.h
src/status_bar/qt/: main.qml  mainwindow.cpp  res.qrc
